actorref(spring-ai-hunyuan): 重构 ChatCompletionRequest 和 HunYuanChatOptions 类
Signed-off-by: StudiousXiaoYu <1316356098@qq.com>